@startuml DomainModel


package InterviewModelAgg  {
    
    class InterviewModel{

    }
    
    
    class SpecName{


    }
    
    
    class JarFile{


    }
    
    
    class Description{


    }

    InterviewModel"1"-->"1"JarFile
    InterviewModel"1"-->"1"SpecName
    InterviewModel"1"-->"1"Description


}
package JobApplicationAgg {

    class JobApplication {
        +id: Long
        +files: List<File>
    }

    class File
    {
        +id : long
        +path : FilePath
        +type : FileType
    }

    class FilePath {
        +path: String
    }

    enum FileType
    {
        CandidateInterviewAnswers
        
    }

    JobApplication --> File

    File --> FilePath
    File --> FileType
}
package JobOpeningAgg {

    class JobOpening {
        +id: JobReference
        +recruitmentProcess: RecruitmentProcess
    }

    class JobReference {
        +customerCode: String
        +jobNumber: int

    }

    class RecruitmentProcess {
        +id: int
        +status: RecruitmentProcessStatus
        +phases: List<Phase>
    }

    class Phase {
        +id: Long
        +name: PhaseName
        +status: PhaseStatus
    }

    enum PhaseName {
            APPLICATION,
            SCREENING,
            INTERVIEWS,
            ANALYSIS,
            RESULT
    }

    enum PhaseStatus {
        Open
        Closed
    }

    enum RecruitmentProcessStatus {
        Uninitiated
        In Process
        Finished
    }

    JobOpening --> RecruitmentProcess
    RecruitmentProcess --> RecruitmentProcessStatus
    RecruitmentProcess --> Phase : "Is separated into"
    Phase --> PhaseName
    Phase --> PhaseStatus

    JobOpening --> JobReference


    InterviewModel --> JobOpening
}

JobApplication --> JobOpening : Refers To
@enduml
